unpackaged/main/default/objects/FundingDisbursement/fields/Bank_Information__c.field-meta.xml
<CustomField>
    <fullName>Bank_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Information</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Bank Account must be associated with the Payee Account</errorMessage>
        <filterItems>
            <field>Bank_Information__c.Organization__c</field>
            <operation>equals</operation>
            <valueField>$Source.Payee_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Bank_Information__c</referenceTo>
    <relationshipLabel>Funding Disbursements</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>