unpackaged/main/default/objects/FundingDisbursement/fields/Funding_Award_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award_Name__c</fullName>
    <formula>FundingAward.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Award Name</label>
    <type>Text</type>
</CustomField>