unpackaged/main/default/objects/FundingDisbursement/fields/GIFTS_Id__c.field-meta.xml
<CustomField>
    <fullName>GIFTS_Id__c</fullName>
    <description>GIFTS ID for Payments transferred during data migration from GIFTS to Salesforce.</description>
    <inlineHelpText>GIFTS ID for Payments transferred during data migration from GIFTS to Salesforce.</inlineHelpText>
    <label>GIFTS Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>