unpackaged/main/default/objects/FundingDisbursement/fields/Payee_Account__c.field-meta.xml
<CustomField>
    <fullName>Payee_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Disbursements (Payee Account)</relationshipLabel>
    <relationshipName>Funding_Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>