unpackaged/main/default/objects/FundingDisbursement/fields/Scheduled_Date_Status__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Status__c</fullName>
    <label>Scheduled Date Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Random</fullName>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>